fix: Align styling to what it used to be before

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -11,3 +11,6 @@ body {
   height: 100%;
   background: var(--light);
 }
+label {
+  margin-bottom: 0;
+}
